--- a/Job Application/survey.html
+++ b/Job Application/survey.html
@@ -31,14 +31,14 @@
 			<input type="radio" name="Relocate" value="No">No
 			<input type="radio" name="Relocate" value="Maybe">Maybe<br><br>
 			<label for="degree">What best describes you? </label>
-	        <input list="designation" name="Designation" required>
-				<datalist id="designation">
-				  <option value="Student">
-				  <option value="Fresher">
-				  <option value="Employed">
-				  <option value="Unemployed">
-				  <option value="Freelancer">
-				</datalist><br><br>
+	    		<select id="designation">
+	    		  <option selected>Select</option>
+				  <option value="Student">Student</option>
+				  <option value="Fresher">Freshr</option>
+				  <option value="Employed">Employed</option>
+				  <option value="Unemployed">Unemployed</option>
+				  <option value="Freelancer">Freelancer</option>
+				</select><br><br>
 			<label>Current CTC</label required>
 			<input type="text" name="CTC"><br><br>
 			<label>Expected CTC</label>
